[gd_scene load_steps=6 format=3 uid="uid://di1x7cpc2ow5c"]

[ext_resource type="Script" path="res://game_objects/player/player.gd" id="1_2ev8r"]
[ext_resource type="Script" path="res://common/shooter.gd" id="2_g21hs"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2gpeb"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ysqwn"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CylinderMesh" id="CylinderMesh_50ecp"]
top_radius = 0.075
bottom_radius = 0.075
height = 1.0

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2ev8r")

[node name="Target" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_2gpeb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_ysqwn")

[node name="Head_X" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67928, 0)

[node name="Head_Y" type="Node3D" parent="Head_X"]

[node name="Camera3D" type="Camera3D" parent="Head_X/Head_Y"]

[node name="Arm" type="MeshInstance3D" parent="Head_X/Head_Y"]
transform = Transform3D(0.903455, 0.279884, -0.324706, 0, 0.757451, 0.652892, 0.428683, -0.589859, 0.684323, 0.412378, -0.109714, -0.730124)
mesh = SubResource("CylinderMesh_50ecp")
skeleton = NodePath("../..")

[node name="ShootPosition" type="Node3D" parent="Head_X/Head_Y/Arm"]
transform = Transform3D(1, 0, 0, 7.15256e-07, 1, 2.98023e-08, -2.98023e-08, -2.98023e-08, 1, -0.0328523, 0.454167, -0.00289547)
script = ExtResource("2_g21hs")

[node name="BulletCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
